--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = "1.3.72"
     ext.moshi_version = '1.8.0'
     ext.retrofit_version = '2.9.0'
+    ext.lifecycle_version = "2.2.0"
 
     repositories {
         google()
